// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-radio-group defaultButtonType 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <div
          class="slds-radio_button-group"
        >
          <span
            class="slds-button slds-radio_button"
          >
            <input
              id="radio-0-3"
              name="testGroup"
              type="radio"
              value="option1"
            />
            <label
              class="slds-radio_button__label"
              for="radio-0-3"
            >
              <span
                class="slds-radio_faux"
              >
                Sales
              </span>
            </label>
          </span>
          <span
            class="slds-button slds-radio_button"
          >
            <input
              id="radio-1-3"
              name="testGroup"
              type="radio"
              value="option2"
            />
            <label
              class="slds-radio_button__label"
              for="radio-1-3"
            >
              <span
                class="slds-radio_faux"
              >
                Force
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group defaultNoType 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <span
          class="slds-radio"
        >
          <input
            id="radio-0-1"
            name="testGroup"
            type="radio"
            value="option1"
          />
          <label
            class="slds-radio__label"
            for="radio-0-1"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Sales
            </span>
          </label>
        </span>
        <span
          class="slds-radio"
        >
          <input
            id="radio-1-1"
            name="testGroup"
            type="radio"
            value="option2"
          />
          <label
            class="slds-radio__label"
            for="radio-1-1"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Force
            </span>
          </label>
        </span>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group defaultRadioType 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <span
          class="slds-radio"
        >
          <input
            id="radio-0-2"
            name="testGroup"
            type="radio"
            value="option1"
          />
          <label
            class="slds-radio__label"
            for="radio-0-2"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Sales
            </span>
          </label>
        </span>
        <span
          class="slds-radio"
        >
          <input
            id="radio-1-2"
            name="testGroup"
            type="radio"
            value="option2"
          />
          <label
            class="slds-radio__label"
            for="radio-1-2"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Force
            </span>
          </label>
        </span>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group disabled button 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <div
          class="slds-radio_button-group"
        >
          <span
            class="slds-button slds-radio_button"
          >
            <input
              disabled=""
              id="radio-0-9"
              name="testGroup"
              type="radio"
              value="option1"
            />
            <label
              class="slds-radio_button__label"
              for="radio-0-9"
            >
              <span
                class="slds-radio_faux"
              >
                Sales
              </span>
            </label>
          </span>
          <span
            class="slds-button slds-radio_button"
          >
            <input
              disabled=""
              id="radio-1-9"
              name="testGroup"
              type="radio"
              value="option2"
            />
            <label
              class="slds-radio_button__label"
              for="radio-1-9"
            >
              <span
                class="slds-radio_faux"
              >
                Force
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group disabled radio 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <span
          class="slds-radio"
        >
          <input
            disabled=""
            id="radio-0-8"
            name="testGroup"
            type="radio"
            value="option1"
          />
          <label
            class="slds-radio__label"
            for="radio-0-8"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Sales
            </span>
          </label>
        </span>
        <span
          class="slds-radio"
        >
          <input
            disabled=""
            id="radio-1-8"
            name="testGroup"
            type="radio"
            value="option2"
          />
          <label
            class="slds-radio__label"
            for="radio-1-8"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Force
            </span>
          </label>
        </span>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group one button selected 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <div
          class="slds-radio_button-group"
        >
          <span
            class="slds-button slds-radio_button"
          >
            <input
              id="radio-0-5"
              name="testGroup"
              type="radio"
              value="option1"
            />
            <label
              class="slds-radio_button__label"
              for="radio-0-5"
            >
              <span
                class="slds-radio_faux"
              >
                Sales
              </span>
            </label>
          </span>
          <span
            class="slds-button slds-radio_button"
          >
            <input
              id="radio-1-5"
              name="testGroup"
              type="radio"
              value="option2"
            />
            <label
              class="slds-radio_button__label"
              for="radio-1-5"
            >
              <span
                class="slds-radio_faux"
              >
                Force
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group one radio selected 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <span
          class="slds-radio"
        >
          <input
            id="radio-0-4"
            name="testGroup"
            type="radio"
            value="option1"
          />
          <label
            class="slds-radio__label"
            for="radio-0-4"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Sales
            </span>
          </label>
        </span>
        <span
          class="slds-radio"
        >
          <input
            id="radio-1-4"
            name="testGroup"
            type="radio"
            value="option2"
          />
          <label
            class="slds-radio__label"
            for="radio-1-4"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Force
            </span>
          </label>
        </span>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group required and disabled button 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        <abbr
          class="slds-required"
          title="required"
        >
          *
        </abbr>
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <div
          class="slds-radio_button-group"
        >
          <span
            class="slds-button slds-radio_button"
          >
            <input
              disabled=""
              id="radio-0-11"
              name="testGroup"
              required=""
              type="radio"
              value="option1"
            />
            <label
              class="slds-radio_button__label"
              for="radio-0-11"
            >
              <span
                class="slds-radio_faux"
              >
                Sales
              </span>
            </label>
          </span>
          <span
            class="slds-button slds-radio_button"
          >
            <input
              disabled=""
              id="radio-1-11"
              name="testGroup"
              required=""
              type="radio"
              value="option2"
            />
            <label
              class="slds-radio_button__label"
              for="radio-1-11"
            >
              <span
                class="slds-radio_faux"
              >
                Force
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group required and disabled radio 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        <abbr
          class="slds-required"
          title="required"
        >
          *
        </abbr>
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <span
          class="slds-radio"
        >
          <input
            disabled=""
            id="radio-0-10"
            name="testGroup"
            required=""
            type="radio"
            value="option1"
          />
          <label
            class="slds-radio__label"
            for="radio-0-10"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Sales
            </span>
          </label>
        </span>
        <span
          class="slds-radio"
        >
          <input
            disabled=""
            id="radio-1-10"
            name="testGroup"
            required=""
            type="radio"
            value="option2"
          />
          <label
            class="slds-radio__label"
            for="radio-1-10"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Force
            </span>
          </label>
        </span>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group required button 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        <abbr
          class="slds-required"
          title="required"
        >
          *
        </abbr>
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <div
          class="slds-radio_button-group"
        >
          <span
            class="slds-button slds-radio_button"
          >
            <input
              id="radio-0-7"
              name="testGroup"
              required=""
              type="radio"
              value="option1"
            />
            <label
              class="slds-radio_button__label"
              for="radio-0-7"
            >
              <span
                class="slds-radio_faux"
              >
                Sales
              </span>
            </label>
          </span>
          <span
            class="slds-button slds-radio_button"
          >
            <input
              id="radio-1-7"
              name="testGroup"
              required=""
              type="radio"
              value="option2"
            />
            <label
              class="slds-radio_button__label"
              for="radio-1-7"
            >
              <span
                class="slds-radio_faux"
              >
                Force
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
</lighting-radio-group>
`;

exports[`lightning-radio-group required radio 1`] = `
<lighting-radio-group
  class="slds-form-element"
>
  #shadow-root(open)
    <fieldset>
      <legend
        class="slds-form-element__legend slds-form-element__label"
      >
        <abbr
          class="slds-required"
          title="required"
        >
          *
        </abbr>
        testGroup
      </legend>
      <div
        class="slds-form-element__control"
      >
        <span
          class="slds-radio"
        >
          <input
            id="radio-0-6"
            name="testGroup"
            required=""
            type="radio"
            value="option1"
          />
          <label
            class="slds-radio__label"
            for="radio-0-6"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Sales
            </span>
          </label>
        </span>
        <span
          class="slds-radio"
        >
          <input
            id="radio-1-6"
            name="testGroup"
            required=""
            type="radio"
            value="option2"
          />
          <label
            class="slds-radio__label"
            for="radio-1-6"
          >
            <span
              class="slds-radio_faux"
            />
            <span
              class="slds-form-element__label"
            >
              Force
            </span>
          </label>
        </span>
      </div>
    </fieldset>
</lighting-radio-group>
`;
